sumo/tests/sumo/extended/calibrator/errors/testsuite.sumo
# invalid flow definition
invalid_flow

# not all routes are appropriate for the vehicle type
vClass_mismatch
